--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -127,14 +127,14 @@
           </div>
           <div class="aboutContent3">
             <div class="aboutImg">
-              <ul data-src="/assets/img/about1.jpg">
+              <ul data-src="<%= image_path("img/about1.jpg") %>">
               </ul>
-              <span style="background:url(./img/about2.jpg) no-repeat;"></span>
+              <span style="background:url("<%= image_path("img/about2.jpg") %>") no-repeat;"></span>
             </div>
             <div class="aboutImg">
-              <ul data-src="assets/img/about3.jpg">
+              <ul data-src="<%= image_path("img/about3.jpg") %>">
               </ul>
-              <span style="background:url(./img/about4.jpg) no-repeat;"></span>
+              <span style="background:url("<%= image_path("img/about4.jpg") %>") no-repeat;"></span>
             </div>
           </div>
         </div>
