--- a/app/assets/stylesheets/happy_birthday.scss
+++ b/app/assets/stylesheets/happy_birthday.scss
@@ -41,7 +41,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 #scene::after {
-  content: '';
+  //content: '';
   position: absolute;
   height: 100%;
   width: 50%;
