to be continued

--- a/app/views/happy_birthday/index.html.erb
+++ b/app/views/happy_birthday/index.html.erb
@@ -68,8 +68,8 @@
       <div class="flake"></div>
     </div>
     <div class="text">
-      <h1>Happy Birthday To Me</h1>
-      <h2>22 Years Old</h2>
+      <h1>To Be Continued</h1>
+      <h2></h2>
     </div>
     <div class="tree one"></div>
     <div class="tree two"></div>
