第三爆弾は敗者が塵を食う!!!!!!!!

--- a/app/views/happy_birthday/index.html.erb
+++ b/app/views/happy_birthday/index.html.erb
@@ -68,7 +68,7 @@
       <div class="flake"></div>
     </div>
     <div class="text">
-      <h1>To Be Continued</h1>
+      <h1>Killer Queen</h1>
       <h2></h2>
     </div>
     <div class="tree one"></div>
@@ -79,7 +79,7 @@
   </div>
   <!--.bea -->
   <div class="platform">
-    <div class="quote">You will do better</div>
+    <div class="quote">第三爆弾は敗者が塵を食う</div>
   </div>
 </div>
 
