awsl,你选的啊，偶像

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,7 +28,11 @@
   <%#= javascript_include_tag "live2d/js/message" %>
   <%#= javascript_include_tag "live2d/js/live2d" %>
   <script type="text/javascript">
-      loadlive2d("live2d", "../assets/live2d/model/Pio/model.json"); //model.json和其模型等都需要放在服务器网站上
+      //kesshouban_v2 血小板
+      //Pio 默认资源
+      //tia 吸血鬼
+      //mali awsl
+      loadlive2d("live2d", "../assets/live2d/model/mali/model.json"); //model.json和其模型等都需要放在服务器网站上
   </script>
   </body>
 </html>
